--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav justify-content-end">
 
         <li class="nav-item">
@@ -48,8 +48,8 @@
           {% endif %}
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'cart:detail' %}">Cart
+        <li class="nav-item active">
+          <a class="nav-link btn btn-outline-success" href="{% url 'cart:detail' %}">Cart
             {% if cart|length > 0 %}
             ${{cart.get_total_price}} with {{cart|length}} items
             {% else %}
